# geond-agent

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: verify.yml
apps/desktop/: README.md  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: architecture.md  desktop-transcript-architecture.md  project-brief.md  repo-structure.md  roadmap.md
docs/adr/: 0001-monorepo-scope.md  0002-ui-localization.md  0003-desktop-workbench-stack.md  0004-desktop-shell-decomposition.md  0005-provider-registry-and-inspector-decomposition.md  0006-approval-review-ux.md  0007-durable-session-index.md  0008-claude-code-bare-apikey-helper.md
docs/guides/: setup.md  zai-coding-tools-setup.md
docs/plans/: approval-forwarding-probe.md  backend-horizontal-expansion.md  codex-live-dogfood-validation.md  evaluation-run-model.md  geond-agent-protocol-integration-strategy.md  glm-5.2-roadmap-advisory-2026-06-22-01-claude-code-deepening.md  glm-5.2-roadmap-advisory-2026-06-22-02-persistence-materialization.md  glm-5.2-roadmap-advisory-2026-06-22-03-horizontal-expansion.md  glm-5.2-roadmap-advisory-2026-06-22-04-model-provider-intelligence.md  glm-5.2-roadmap-advisory-2026-06-22-synthesis.md  glm-5.2-workbench-advisory-2026-06-22-approval-review.md  session-resume-continuity.md  (+22 more)
(+130 files in other folders)
